--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/s_appName"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/thm_App">
 
         <activity android:name=".MainActivity">
             <intent-filter>
